--- a/app.env
+++ b/app.env
@@ -3,3 +3,4 @@ DB_DRIVER=postgres
 DB_SOURCE=postgresql://root:secret@localhost:5432/simplebank?sslmode=disable
 TOKEN_SYMETRIC_KEY=12345678901234567890123456789012
 ACCESS_TOKEN_DURATION=15m
+REFRESH_TOKEN_DURATION=24h
