--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -10,10 +10,23 @@ on:
     branches: [ "main" ]
 
 jobs:
-
   test:
     name: test
     runs-on: ubuntu-latest
+    
+    services:
+      postgres:
+        image: postgres
+        env:
+          POSTGRES_USER: root
+          POSTGRES_PASSWORD: secret
+          POSTGRES_DB: simplebank
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+    
     steps:
     - uses: actions/checkout@v3
 
@@ -22,5 +35,8 @@ jobs:
       with:
         go-version: 1.19
 
+    - name: run migration
+      run: make migrateup
+      
     - name: Test
       run: make test
